# AdventOfCode

./: .gitignore
2015/: Cargo.toml
2015/src/: main.rs
2015/src/day11/: mod.rs
2015/src/day12/: mod.rs
2015/src/day13/: mod.rs
2015/src/day14/: mod.rs
2015/src/day15/: mod.rs
2015/src/day16/: mod.rs
2015/src/day17/: mod.rs  test.txt
2015/src/day18/: mod.rs
2015/src/day19/: mod.rs
2015/src/day20/: mod.rs
2015/src/day21/: mod.rs
2015/src/day22/: mod.rs
2015/src/day23/: mod.rs
2015/src/day24/: mod.rs
2015/src/day25/: mod.rs
2016/: template.hs
2016/1/: Cargo.toml  day1.hs
2016/10/: day10.hs
2016/2/: Cargo.toml  day2.hs
2016/3/: Cargo.toml  day3.hs
2016/4/: Cargo.toml  day4.hs
2020/: Cargo.toml
2021/: Cargo.toml
2021-hs/: CHANGELOG.md  template.hs  x2021-hs.cabal
2021/src/: main.rs
2021/src/day1/: mod.rs
2021/src/day10/: mod.rs
2021/src/day11/: mod.rs
2021/src/day12/: mod.rs
2021/src/day13/: mod.rs
2021/src/day14/: mod.rs
2021/src/day15/: mod.rs
2021/src/day16/: mod.rs
2021/src/day17/: formatted.txt  mod.rs
2021/src/day18/: actual.txt  mod.rs
2021/src/day19/: mod.rs
2021/src/day2/: mod.rs
2021/src/day20/: mod.rs
2021/src/day21/: mod.rs
2021/src/day22/: dedup.txt  mod.rs
2021/src/day23/: mod.rs
2021/src/day24/: mod.rs  notes.txt
2021/src/day25/: mod.rs
2021/src/day3/: mod.rs
2021/src/day4/: mod.rs
2021/src/day5/: mod.rs
2021/src/day6/: mod.rs
2021/src/day7/: mod.rs
2021/src/day8/: mod.rs
2021/src/day9/: mod.rs
2023/: template.py
2024/: template.py
2025/: hie.yaml
(+371 files in other folders)
