[package]
name = "aoc_2015"
version = "0.1.0"
authors = ["rbenua"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
string-error = "0.1.0"
lazy_static = "1.4.0"
parse-display = "0.4.0"
nom = "6.0.1"
json = "0.12.4"
permutator = "0.4.0"
num = "0.4.0"
enum-map = "1.1.1"