[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["rbenua"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
regex = "*"
string-error = "*"
lazy_static = "*"
parse-display = "*"
itertools = "*"
permutator = "*"